@@ -17,25 +17,20 @@
 package org.apache.solr.cli;
 
 import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Collections;
-import java.util.List;
+import java.nio.file.StandardCopyOption;
 import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.cli.Options;
 import org.apache.commons.io.file.PathUtils;
+import org.apache.solr.cli.CommonCLIOptions.DefaultValues;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.CloudHttp2SolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.apache.solr.client.solrj.impl.JsonMapResponseParser;
@@ -43,7 +38,7 @@ import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.response.CoreAdminResponse;
-import org.apache.solr.common.cloud.ZkMaintenanceUtils;
+import org.apache.solr.cloud.ZkConfigSetService;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.CollectionAdminParams;
 import org.apache.solr.common.params.CommonParams;
@@ -55,12 +50,55 @@ import org.noggit.JSONWriter;
 /** Supports create command in the bin/solr script. */
 public class CreateTool extends ToolBase {
 
-  public CreateTool() {
-    this(CLIO.getOutStream());
-  }
+  private static final Option COLLECTION_NAME_OPTION =
+      Option.builder("c")
+          .longOpt("name")
+          .hasArg()
+          .argName("NAME")
+          .required()
+          .desc("Name of collection or core to create.")
+          .build();
 
-  public CreateTool(PrintStream stdout) {
-    super(stdout);
+  private static final Option SHARDS_OPTION =
+      Option.builder("sh")
+          .longOpt("shards")
+          .hasArg()
+          .argName("#")
+          .type(Integer.class)
+          .desc("Number of shards; default is 1.")
+          .build();
+
+  private static final Option REPLICATION_FACTOR_OPTION =
+      Option.builder("rf")
+          .longOpt("replication-factor")
+          .hasArg()
+          .argName("#")
+          .type(Integer.class)
+          .desc(
+              "Number of copies of each document across the collection (replicas per shard); default is 1.")
+          .build();
+
+  private static final Option CONF_DIR_OPTION =
+      Option.builder("d")
+          .longOpt("conf-dir")
+          .hasArg()
+          .argName("DIR")
+          .desc(
+              "Configuration directory to copy when creating the new collection; default is "
+                  + DefaultValues.DEFAULT_CONFIG_SET
+                  + '.')
+          .build();
+
+  private static final Option CONF_NAME_OPTION =
+      Option.builder("n")
+          .longOpt("conf-name")
+          .hasArg()
+          .argName("NAME")
+          .desc("Configuration name; default is the collection name.")
+          .build();
+
+  public CreateTool(ToolRuntime runtime) {
+    super(runtime);
   }
 
   @Override
@@ -69,59 +107,32 @@ public class CreateTool extends ToolBase {
   }
 
   @Override
-  public List<Option> getOptions() {
-    return List.of(
-        SolrCLI.OPTION_ZKHOST,
-        SolrCLI.OPTION_SOLRURL,
-        Option.builder("c")
-            .longOpt("name")
-            .argName("NAME")
-            .hasArg()
-            .required(true)
-            .desc("Name of collection or core to create.")
-            .build(),
-        Option.builder("s")
-            .longOpt("shards")
-            .argName("#")
-            .hasArg()
-            .required(false)
-            .desc("Number of shards; default is 1.")
-            .build(),
-        Option.builder("rf")
-            .longOpt("replicationFactor")
-            .argName("#")
-            .hasArg()
-            .required(false)
-            .desc(
-                "Number of copies of each document across the collection (replicas per shard); default is 1.")
-            .build(),
-        Option.builder("d")
-            .longOpt("confdir")
-            .argName("NAME")
-            .hasArg()
-            .required(false)
-            .desc(
-                "Configuration directory to copy when creating the new collection; default is "
-                    + SolrCLI.DEFAULT_CONFIG_SET
-                    + '.')
-            .build(),
-        Option.builder("n")
-            .longOpt("confname")
-            .argName("NAME")
-            .hasArg()
-            .required(false)
-            .desc("Configuration name; default is the collection name.")
-            .build(),
-        SolrCLI.OPTION_CREDENTIALS,
-        SolrCLI.OPTION_VERBOSE);
+  public String getHeader() {
+    return "Creates a core or collection depending on whether Solr is running in standalone (core) or SolrCloud mode (collection).\n"
+        + "If you are using standalone mode you must run this command on the Solr server itself.\n"
+        + "\n"
+        + "List of options:";
+  }
+
+  @Override
+  public Options getOptions() {
+    Options opts =
+        super.getOptions()
+            .addOption(COLLECTION_NAME_OPTION)
+            .addOption(SHARDS_OPTION)
+            .addOption(REPLICATION_FACTOR_OPTION)
+            .addOption(CONF_DIR_OPTION)
+            .addOption(CONF_NAME_OPTION)
+            .addOption(CommonCLIOptions.CREDENTIALS_OPTION)
+            .addOptionGroup(getConnectionOptions());
+
+    return opts;
   }
 
   @Override
   public void runImpl(CommandLine cli) throws Exception {
-    SolrCLI.raiseLogLevelUnlessVerbose(cli);
-
-    try (var solrClient = SolrCLI.getSolrClient(cli)) {
-      if (SolrCLI.isCloudMode(solrClient)) {
+    try (var solrClient = CLIUtils.getSolrClient(cli)) {
+      if (CLIUtils.isCloudMode(solrClient)) {
         createCollection(cli);
       } else {
         createCore(cli, solrClient);
@@ -130,15 +141,17 @@ public class CreateTool extends ToolBase {
   }
 
   protected void createCore(CommandLine cli, SolrClient solrClient) throws Exception {
-    String coreName = cli.getOptionValue("name");
-    String solrUrl = cli.getOptionValue("solrUrl", SolrCLI.getDefaultSolrUrl());
+    String coreName = cli.getOptionValue(COLLECTION_NAME_OPTION);
+    String solrUrl =
+        cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION, CLIUtils.getDefaultSolrUrl());
 
     final String solrInstallDir = System.getProperty("solr.install.dir");
-    final String confDirName = cli.getOptionValue("confdir", SolrCLI.DEFAULT_CONFIG_SET);
+    final String confDirName =
+        cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
 
     // we allow them to pass a directory instead of a configset name
-    Path configsetDir = Paths.get(confDirName);
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
+    Path configsetDir = Path.of(confDirName);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
 
     if (!Files.isDirectory(configsetDir)) {
       ensureConfDirExists(solrInstallDirPath, configsetDir);
@@ -147,23 +160,22 @@ public class CreateTool extends ToolBase {
 
     String coreRootDirectory; // usually same as solr home, but not always
 
-    Map<String, Object> systemInfo =
-        solrClient
-            .request(new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH))
-            .asMap();
+    NamedList<?> systemInfo =
+        solrClient.request(
+            new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH));
 
     // convert raw JSON into user-friendly output
     coreRootDirectory = (String) systemInfo.get("core_root");
 
-    if (SolrCLI.safeCheckCoreExists(
-        solrUrl, coreName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
+    if (CLIUtils.safeCheckCoreExists(
+        solrUrl, coreName, cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION))) {
       throw new IllegalArgumentException(
           "\nCore '"
               + coreName
               + "' already exists!\nChecked core existence using Core API command");
     }
 
-    Path coreInstanceDir = Paths.get(coreRootDirectory, coreName);
+    Path coreInstanceDir = Path.of(coreRootDirectory, coreName);
     Path confDir = getFullConfDir(solrInstallDirPath, configsetDir).resolve("conf");
     if (!Files.isDirectory(coreInstanceDir)) {
       Files.createDirectories(coreInstanceDir);
@@ -172,24 +184,23 @@ public class CreateTool extends ToolBase {
             "Failed to create new core instance directory: " + coreInstanceDir.toAbsolutePath());
       }
 
-      FileUtils.copyDirectoryToDirectory(confDir.toFile(), coreInstanceDir.toFile());
+      PathUtils.copyDirectory(confDir, coreInstanceDir, StandardCopyOption.COPY_ATTRIBUTES);
 
       echoIfVerbose(
           "\nCopying configuration to new core instance directory:\n"
-              + coreInstanceDir.toAbsolutePath(),
-          cli);
+              + coreInstanceDir.toAbsolutePath());
     }
 
-    echoIfVerbose("\nCreating new core '" + coreName + "' using CoreAdminRequest", cli);
+    echoIfVerbose("\nCreating new core '" + coreName + "' using CoreAdminRequest");
 
     try {
       CoreAdminResponse res = CoreAdminRequest.createCore(coreName, coreName, solrClient);
-      if (cli.hasOption(SolrCLI.OPTION_VERBOSE.getOpt())) {
+      if (isVerbose()) {
         echo(res.jsonStr());
         echo("\n");
-      } else {
-        echo(String.format(Locale.ROOT, "\nCreated new core '%s'", coreName));
       }
+      echo(String.format(Locale.ROOT, "\nCreated new core '%s'", coreName));
+
     } catch (Exception e) {
       /* create-core failed, cleanup the copied configset before propagating the error. */
       PathUtils.deleteDirectory(coreInstanceDir);
@@ -204,13 +215,10 @@ public class CreateTool extends ToolBase {
             .withConnectionTimeout(15, TimeUnit.SECONDS)
             .withKeyStoreReloadInterval(-1, TimeUnit.SECONDS)
             .withOptionalBasicAuthCredentials(
-                cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()));
-    String zkHost = SolrCLI.getZkHost(cli);
-    try (CloudSolrClient cloudSolrClient =
-        new CloudHttp2SolrClient.Builder(Collections.singletonList(zkHost), Optional.empty())
-            .withInternalClientBuilder(builder)
-            .build()) {
-      echoIfVerbose("Connecting to ZooKeeper at " + zkHost, cli);
+                cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION));
+    String zkHost = CLIUtils.getZkHost(cli);
+    echoIfVerbose("Connecting to ZooKeeper at " + zkHost);
+    try (CloudSolrClient cloudSolrClient = CLIUtils.getCloudHttp2SolrClient(zkHost, builder)) {
       cloudSolrClient.connect();
       createCollection(cloudSolrClient, cli);
     }
@@ -219,12 +227,12 @@ public class CreateTool extends ToolBase {
   protected void createCollection(CloudSolrClient cloudSolrClient, CommandLine cli)
       throws Exception {
 
-    String collectionName = cli.getOptionValue("name");
+    String collectionName = cli.getOptionValue(COLLECTION_NAME_OPTION);
     final String solrInstallDir = System.getProperty("solr.install.dir");
-    String confName = cli.getOptionValue("confname");
-    String confDir = cli.getOptionValue("confdir", "_default");
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
-    Path confDirPath = Paths.get(confDir);
+    String confName = cli.getOptionValue(CONF_NAME_OPTION);
+    String confDir = cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
+    Path confDirPath = Path.of(confDir);
     ensureConfDirExists(solrInstallDirPath, confDirPath);
     printDefaultConfigsetWarningIfNecessary(cli);
 
@@ -234,16 +242,15 @@ public class CreateTool extends ToolBase {
           "No live nodes found! Cannot create a collection until "
               + "there is at least 1 live node in the cluster.");
 
-    String solrUrl = cli.getOptionValue("solrUrl");
+    String solrUrl = cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION);
     if (solrUrl == null) {
       String firstLiveNode = liveNodes.iterator().next();
       solrUrl = ZkStateReader.from(cloudSolrClient).getBaseUrlForNodeName(firstLiveNode);
     }
 
     // build a URL to create the collection
-    int numShards = Integer.parseInt(cli.getOptionValue("shards", String.valueOf(1)));
-    int replicationFactor =
-        Integer.parseInt(cli.getOptionValue("replicationFactor", String.valueOf(1)));
+    int numShards = cli.getParsedOptionValue(SHARDS_OPTION, 1);
+    int replicationFactor = cli.getParsedOptionValue(REPLICATION_FACTOR_OPTION, 1);
 
     boolean configExistsInZk =
         confName != null
@@ -261,7 +268,10 @@ public class CreateTool extends ToolBase {
         confName = collectionName;
       }
 
-      final Path configsetsDirPath = getConfigSetsDir(solrInstallDirPath);
+      // TODO: This should be done using the configSet API
+      final Path configsetsDirPath = CLIUtils.getConfigSetsDir(solrInstallDirPath);
+      ConfigSetService configSetService =
+          new ZkConfigSetService(ZkStateReader.from(cloudSolrClient).getZkClient());
       Path confPath = ConfigSetService.getConfigsetPath(confDir, configsetsDirPath.toString());
 
       echoIfVerbose(
@@ -270,18 +280,14 @@ public class CreateTool extends ToolBase {
               + " for config "
               + confName
               + " to ZooKeeper at "
-              + cloudSolrClient.getClusterStateProvider().getQuorumHosts(),
-          cli);
-      ZkMaintenanceUtils.uploadToZK(
-          ZkStateReader.from(cloudSolrClient).getZkClient(),
-          confPath,
-          ZkMaintenanceUtils.CONFIGS_ZKNODE + "/" + confName,
-          ZkMaintenanceUtils.UPLOAD_FILENAME_EXCLUDE_PATTERN);
+              + cloudSolrClient.getClusterStateProvider().getQuorumHosts());
+      // We will trust the config since we have the Zookeeper Address
+      configSetService.uploadConfig(confName, confPath);
     }
 
     // since creating a collection is a heavy-weight operation, check for existence first
-    if (SolrCLI.safeCheckCollectionExists(
-        solrUrl, collectionName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
+    if (CLIUtils.safeCheckCollectionExists(
+        solrUrl, collectionName, cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION))) {
       throw new IllegalStateException(
           "\nCollection '"
               + collectionName
@@ -290,7 +296,7 @@ public class CreateTool extends ToolBase {
 
     // doesn't seem to exist ... try to create
     echoIfVerbose(
-        "\nCreating new collection '" + collectionName + "' using CollectionAdminRequest", cli);
+        "\nCreating new collection '" + collectionName + "' using CollectionAdminRequest");
 
     NamedList<Object> response;
     try {
@@ -304,34 +310,28 @@ public class CreateTool extends ToolBase {
           "Failed to create collection '" + collectionName + "' due to: " + sse.getMessage());
     }
 
-    if (cli.hasOption(SolrCLI.OPTION_VERBOSE.getOpt())) {
+    if (isVerbose()) {
       // pretty-print the response to stdout
       CharArr arr = new CharArr();
-      new JSONWriter(arr, 2).write(response.asMap());
+      new JSONWriter(arr, 2).write(response.asMap(10));
       echo(arr.toString());
-    } else {
-      String endMessage =
-          String.format(
-              Locale.ROOT,
-              "Created collection '%s' with %d shard(s), %d replica(s)",
-              collectionName,
-              numShards,
-              replicationFactor);
-      if (confName != null && !confName.trim().isEmpty()) {
-        endMessage += String.format(Locale.ROOT, " with config-set '%s'", confName);
-      }
-
-      echo(endMessage);
     }
-  }
+    String endMessage =
+        String.format(
+            Locale.ROOT,
+            "Created collection '%s' with %d shard(s), %d replica(s)",
+            collectionName,
+            numShards,
+            replicationFactor);
+    if (confName != null && !confName.trim().isEmpty()) {
+      endMessage += String.format(Locale.ROOT, " with config-set '%s'", confName);
+    }
 
-  private Path getConfigSetsDir(Path solrInstallDir) {
-    Path configSetsPath = Paths.get("server/solr/configsets/");
-    return solrInstallDir.resolve(configSetsPath);
+    echo(endMessage);
   }
 
   private Path getFullConfDir(Path solrInstallDir, Path confDirName) {
-    return getConfigSetsDir(solrInstallDir).resolve(confDirName);
+    return CLIUtils.getConfigSetsDir(solrInstallDir).resolve(confDirName);
   }
 
   private void ensureConfDirExists(Path solrInstallDir, Path confDirName) {
@@ -340,31 +340,34 @@ public class CreateTool extends ToolBase {
       Path fullConfDir = getFullConfDir(solrInstallDir, confDirName);
       if (!Files.isDirectory(fullConfDir)) {
         echo("Specified configuration directory " + confDirName + " not found!");
-        System.exit(1);
+        runtime.exit(1);
       }
     }
   }
 
   private void printDefaultConfigsetWarningIfNecessary(CommandLine cli) {
-    final String confDirectoryName = cli.getOptionValue("confdir", "_default");
-    final String confName = cli.getOptionValue("confname", "");
+    final String confDirectoryName =
+        cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
+    final String confName = cli.getOptionValue(CONF_NAME_OPTION, "");
 
     if (confDirectoryName.equals("_default")
         && (confName.equals("") || confName.equals("_default"))) {
-      final String collectionName = cli.getOptionValue("collection");
-      final String solrUrl = cli.getOptionValue("solrUrl", SolrCLI.getDefaultSolrUrl());
+      final String collectionName = cli.getOptionValue(COLLECTION_NAME_OPTION);
+      final String solrUrl =
+          cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION, CLIUtils.getDefaultSolrUrl());
       final String curlCommand =
           String.format(
               Locale.ROOT,
-              "curl %s/%s/config -d "
+              "curl %s/solr/%s/config -d "
                   + "'{\"set-user-property\": {\"update.autoCreateFields\":\"false\"}}'",
               solrUrl,
               collectionName);
       final String configCommand =
           String.format(
               Locale.ROOT,
-              "bin/solr config -c %s -p 8983 -action set-user-property -property update.autoCreateFields -value false",
-              collectionName);
+              "bin/solr config -c %s -s %s --action set-user-property --property update.autoCreateFields --value false",
+              collectionName,
+              solrUrl);
       echo(
           "WARNING: Using _default configset. Data driven schema functionality is enabled by default, which is");
       echo("         NOT RECOMMENDED for production use.");
