@@ -17,14 +17,17 @@
 package org.apache.solr.handler;
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Writer;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Properties;
 import java.util.concurrent.TimeUnit;
@@ -32,7 +35,7 @@ import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
+import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.SolrDocumentList;
@@ -41,7 +44,6 @@ import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
-import org.apache.solr.util.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -50,12 +52,18 @@ public final class ReplicationTestHelper {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   public static final String CONF_DIR =
-      "solr" + File.separator + "collection1" + File.separator + "conf" + File.separator;
+      "solr"
+          + FileSystems.getDefault().getSeparator()
+          + "collection1"
+          + FileSystems.getDefault().getSeparator()
+          + "conf"
+          + FileSystems.getDefault().getSeparator();
 
   public static JettySolrRunner createAndStartJetty(SolrInstance instance) throws Exception {
-    FileUtils.copyFile(
-        new File(SolrTestCaseJ4.TEST_HOME(), "solr.xml"),
-        new File(instance.getHomeDir(), "solr.xml"));
+    Files.copy(
+        SolrTestCaseJ4.TEST_HOME().resolve("solr.xml"),
+        Path.of(instance.getHomeDir(), "solr.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
     Properties nodeProperties = new Properties();
     nodeProperties.setProperty("solr.data.dir", instance.getDataDir());
     JettyConfig jettyConfig = JettyConfig.builder().setPort(0).build();
@@ -64,10 +72,22 @@ public final class ReplicationTestHelper {
     return jetty;
   }
 
+  /**
+   * @param baseUrl the root URL for a Solr node
+   */
   public static SolrClient createNewSolrClient(String baseUrl) {
-    return new HttpSolrClient.Builder(baseUrl)
+    return createNewSolrClient(baseUrl, null);
+  }
+
+  /**
+   * @param baseUrl the root URL for a Solr node
+   * @param collectionOrCore an optional default collection/core for the created client
+   */
+  public static Http2SolrClient createNewSolrClient(String baseUrl, String collectionOrCore) {
+    return new Http2SolrClient.Builder(baseUrl)
+        .withDefaultCollection(collectionOrCore)
         .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
-        .withSocketTimeout(90000, TimeUnit.MILLISECONDS)
+        .withIdleTimeout(90000, TimeUnit.MILLISECONDS)
         .build();
   }
 
@@ -83,15 +103,16 @@ public final class ReplicationTestHelper {
    * character copy of file using UTF-8. If port is non-null, will be substituted any time
    * "TEST_PORT" is found.
    */
-  private static void copyFile(File src, File dst, Integer port, boolean internalCompression)
+  private static void copyFile(Path src, Path dst, Integer port, boolean internalCompression)
       throws IOException {
-    try (BufferedReader in = Files.newBufferedReader(src.toPath(), StandardCharsets.UTF_8);
-        Writer out = Files.newBufferedWriter(dst.toPath(), StandardCharsets.UTF_8)) {
+    try (BufferedReader in = Files.newBufferedReader(src, StandardCharsets.UTF_8);
+        Writer out = Files.newBufferedWriter(dst, StandardCharsets.UTF_8)) {
       for (String line = in.readLine(); null != line; line = in.readLine()) {
         if (null != port) {
           line = line.replace("TEST_PORT", port.toString());
         }
-        line = line.replace("COMPRESSION", internalCompression ? "internal" : "false");
+        String externalCompression = LuceneTestCase.random().nextBoolean() ? "external" : "false";
+        line = line.replace("COMPRESSION", internalCompression ? "internal" : externalCompression);
         out.write(line);
       }
     }
@@ -143,7 +164,7 @@ public final class ReplicationTestHelper {
     // String leaderUrl = buildUrl(pJettyPort) + "/" + DEFAULT_TEST_CORENAME +
     // ReplicationHandler.PATH+"?command=" + pCommand;
     String url = baseUrl + ReplicationHandler.PATH + "?command=" + pCommand;
-    URL u = new URL(url);
+    URL u = URI.create(url).toURL();
     InputStream stream = u.openStream();
     stream.close();
   }
@@ -214,7 +235,7 @@ public final class ReplicationTestHelper {
             + "?wait=true&command=fetchindex&leaderUrl="
             + srcUrl
             + ReplicationHandler.PATH;
-    url = new URL(leaderUrl);
+    url = URI.create(leaderUrl).toURL();
     stream = url.openStream();
     stream.close();
   }
@@ -223,9 +244,9 @@ public final class ReplicationTestHelper {
 
     private final String name;
     private Integer testPort;
-    private final File homeDir;
-    private File confDir;
-    private File dataDir;
+    private final Path homeDir;
+    private Path confDir;
+    private Path dataDir;
 
     /**
      * @param homeDir Base directory to build solr configuration and index in
@@ -233,7 +254,7 @@ public final class ReplicationTestHelper {
      *     new conf dir.
      * @param testPort if not null, used as a replacement for TEST_PORT in the cloned config files.
      */
-    public SolrInstance(File homeDir, String name, Integer testPort) {
+    public SolrInstance(Path homeDir, String name, Integer testPort) {
       this.homeDir = homeDir;
       this.name = name;
       this.testPort = testPort;
@@ -252,7 +273,7 @@ public final class ReplicationTestHelper {
     }
 
     public String getDataDir() {
-      return dataDir.getAbsolutePath();
+      return dataDir.toString();
     }
 
     public String getSolrConfigFile() {
@@ -272,14 +293,14 @@ public final class ReplicationTestHelper {
       props.setProperty("name", "collection1");
 
       SolrTestCaseJ4.writeCoreProperties(
-          homeDir.toPath().resolve("collection1"), props, "TestReplicationHandler");
+          homeDir.resolve("collection1"), props, "TestReplicationHandler");
 
-      dataDir = new File(homeDir + "/collection1", "data");
-      confDir = new File(homeDir + "/collection1", "conf");
+      dataDir = Path.of(homeDir + "/collection1", "data");
+      confDir = Path.of(homeDir + "/collection1", "conf");
 
-      homeDir.mkdirs();
-      dataDir.mkdirs();
-      confDir.mkdirs();
+      Files.createDirectories(homeDir);
+      Files.createDirectories(dataDir);
+      Files.createDirectories(confDir);
 
       copyConfigFile(getSolrConfigFile(), "solrconfig.xml");
       copyConfigFile(getSchemaFile(), "schema.xml");
@@ -291,7 +312,7 @@ public final class ReplicationTestHelper {
     public void copyConfigFile(String srcFile, String destFile) throws IOException {
       copyFile(
           SolrTestCaseJ4.getFile(srcFile),
-          new File(confDir, destFile),
+          confDir.resolve(destFile),
           testPort,
           LuceneTestCase.random().nextBoolean());
     }
